small error fixes and new file with processed data

--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -169,7 +169,7 @@
    "source": [
     "Given that difference, our next steps will be to check for outliers in the data.\n",
     "\n",
-    "There is at one extreme outlier in the data, associated with the vendorid code 1, that will be dropped for the sake of data quality."
+    "There isone extreme outlier in the data, associated with the vendorid code 1, that will be dropped for the sake of data quality."
    ]
   },
   {
@@ -1421,7 +1421,7 @@
    "id": "c8f5641a-90c4-4395-ad5f-a4caf9c4f5b1",
    "metadata": {},
    "source": [
-    "## ``passenger_count```column\n",
+    "## ```passenger_count```column\n",
     "\n",
     "Note that up to six passengers the distributions are quite superposed, while 7, 8, and 9 passengers trips acount for only 7 observations in the whole dataset. \n",
     "\n",
@@ -1608,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "4ffa9aa3-b43d-45f3-8bdd-de8e1c6476ee",
    "metadata": {},
    "outputs": [
@@ -1851,7 +1851,7 @@
        "std     2.472840e+03         1.955063e+01  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1859,6 +1859,16 @@
    "source": [
     "data = data.drop(['store_and_fwd_flag', 'passenger_count', 'payment_type'], axis = 1)\n",
     "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e35d3635-0dde-48e7-ba68-a894848c3298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('../data/processed/processed_01.csv', index=False)"
    ]
   }
  ],
